--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 pulldown-cmark = { version = "0.9.3", default-features = false, features = ["simd"] }
 tokio = { version = "1.32.0", features = ["sync"] }
+syntect = "5.1.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
